--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 # Logging
-#logging.level.root=ERROR
+#logging.level.root=INFO
 #logging.level.org.springframework.web=INFO
 
 spring.jpa.open-in-view=true
 spring.security.user.roles=ADMIN
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.security.user.name=test
+spring.security.user.password=test
